--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">uber-app</string>
     <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_driver">DriverActivity</string>
+    <string name="title_activity_passenger">PassengerActivity</string>
 </resources>
